<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:enabled="true"
        android:icon="@drawable/ic_apps"
        android:checked="true"
        android:title="@string/text_filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:checked="true"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:checked="true"
        android:title="@string/text_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_shop"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/txt_shop"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/txt_home"
        app:showAsAction="ifRoom" />

</menu>